--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Get xcluster
       run: |
         wget https://github.com/Nordix/xcluster/releases/download/7.8.0/xcluster-7.8.0.tar.xz -O /tmp/$USER/xcluster.tar.xz
-        tar xvf /tmp/xcluster.tar.xz -C /tmp/$USER/xcluster/
+        tar xvf /tmp/$USER/xcluster.tar.xz -C /tmp/$USER/xcluster/
         ls -lrt /tmp/$USER/
 
     - name: Run tests
