--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -16,6 +16,9 @@ jobs:
 
     - name: Get xcluster
       run: |
+        pwd
+        wget https://github.com/Nordix/xcluster/releases/download/7.8.0/xcluster-7.8.0.tar.xz
+        ls -lrt
         wget https://github.com/Nordix/xcluster/releases/download/7.8.0/xcluster-7.8.0.tar.xz -O /tmp/$USER/xcluster.tar.xz
         tar xvf /tmp/$USER/xcluster.tar.xz -C /tmp/$USER/xcluster/
         ls -lrt /tmp/$USER/
