--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         mkdir ${{ runner.temp }}/xcluster
         wget -q -O ${{ runner.temp }}/xcluster.tar.xz https://github.com/Nordix/xcluster/releases/download/7.8.0/xcluster-7.8.0.tar.xz
-        tar xvf ${{ runner.temp }}/xcluster.tar.xz -C ${{ runner.temp }}/xcluster/
+        tar xvf ${{ runner.temp }}/xcluster.tar.xz -C ${{ runner.temp }}/
         ls -lrt ${{ runner.temp }}/xcluster/
 
     - name: Run tests
