--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,14 +14,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Enable KVM group perms
+    - name: Install qemu-system-x86_64
       run: |
-        echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
-        sudo udevadm control --reload-rules
-        sudo udevadm trigger --name-match=kvm
         sudo apt-get update
-        sudo apt-get install -y libvirt-clients libvirt-daemon-system libvirt-daemon virtinst bridge-utils qemu qemu-system-x86
-        sudo usermod -a -G kvm,libvirt $USER
+        sudo apt-get install -y qemu qemu-system-x86_64
 
     - name: Get xcluster
       run: |
