--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,10 +14,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Install qemu-system-x86_64
+    - name: Install qemu-system-x86
       run: |
         sudo apt-get update
-        sudo apt-get install -y qemu qemu-system-x86_64
+        sudo apt-get install -y qemu qemu-system-x86
 
     - name: Get xcluster
       run: |
