--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -19,6 +19,10 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y qemu qemu-kvm qemu-system-x86 xterm screen net-tools
 
+    - name: Check env
+      run: |
+        kvm-ok
+
     - name: Get xcluster
       run: |
         mkdir ${{ runner.temp }}/xcluster
