--- a/test/ovl/ebpf/default/etc/init.d/51ebpf.rc
+++ b/test/ovl/ebpf/default/etc/init.d/51ebpf.rc
@@ -5,16 +5,18 @@
 
 vm() {
         ethtool -L eth1 combined 1
+        xdp_run.sh xdp-udp-reflector eth1
 }
 
 router() {
         ethtool -L eth1 combined 1
         ethtool -L eth2 combined 1
-        nohup xdp-sock -H 00:00:00:01:01:c9 -G 00:00:00:01:01:01 -t -i eth1 -s 64 &
+        # nohup xdp-sock -H 00:00:00:01:01:c9 -G 00:00:00:01:01:01 -t -i eth1 -s 64 &
 }
 
 tester() {
-        nohup xdp-sock -H 00:00:00:01:02:dd -G 00:00:00:01:01:01 -t -i eth1 -s 64 &
+        # nohup xdp-sock -H 00:00:00:01:02:dd -G 00:00:00:01:01:01 -t -i eth1 -s 64 &
+        nohup xdp-trafficgen udp -m 00:00:00:01:01:c9 -M 00:00:00:01:01:dd eth1 -a 1000::1:c0a8:2dd -A 1000::1:c0a8:101 &
         return 0
 }
 
